Fix user show alignment issue

--- a/frontend/src/components/stylesheets/components/user_show.scss
+++ b/frontend/src/components/stylesheets/components/user_show.scss
@@ -39,6 +39,12 @@
       justify-content: center;
       align-items: center;
 
+      div.user-text-info-container {
+        width: inherit;
+        @include flex-centered;
+        flex-direction: column;
+      }
+
       h2.username {
         text-align: center;
         margin-bottom: 0;
@@ -54,8 +60,8 @@
       }
 
       div.user-icon-container {
-        max-width: 100px;
-        max-height: 100px;
+        width: 100px;
+        height: 100px;
         border-radius: 5px;
         overflow: hidden;
 
